--- a/index.html
+++ b/index.html
@@ -26,33 +26,32 @@
                         id="username"
                         class="c-form__input"
                         placeholder=" "
-                        pattern="[^\s]+"
                         required>
 
                     <label class="c-form__next" for="progress2" role="button">
                         <span class="c-form__nextIcon"></span>
                     </label>
 
-      <span class="c-form__groupLabel">Entrez votre nom.</span>
+      <span class="c-form__groupLabel">Entrez votre nom et votre prénom.</span>
       <b class="c-form__border"></b>
       </label>
     </div>
 
     <div class="c-form__group">
-        <label class="c-form__label" for="username">
+        <label class="c-form__label" for="participants">
                       <input
-                          type="text"
-                          id="username"
+                          type="number"
+                          id="participants"
                           class="c-form__input"
                           placeholder=" "
-                          pattern="[^\s]+"
+                          min="0"
                           required>
   
                       <label class="c-form__next" for="progress3" role="button">
                           <span class="c-form__nextIcon"></span>
                       </label>
   
-        <span class="c-form__groupLabel">Entrez votre pénom.</span>
+        <span class="c-form__groupLabel">Entrez le nombre de participants.</span>
         <b class="c-form__border"></b>
         </label>
       </div>
