--- a/index.html
+++ b/index.html
@@ -370,6 +370,16 @@
     left: 60px;
     z-index: 11;
 }
+    
+@media (max-width: 385px) {
+    span.c-form__groupLabel {
+    font-size: 14px;
+}
+
+.c-checkbox:nth-of-type(1):checked ~ .c-formContainer .c-form {
+    width: 300px;
+}
+}
 </style>
 </body>
 </html>
