--- a/index.html
+++ b/index.html
@@ -379,6 +379,13 @@
 .c-checkbox:nth-of-type(1):checked ~ .c-formContainer .c-form {
     width: 300px;
 }
+
+    .c-welcome {
+    font-size: 28PX;
+}
+.fin{
+    width: 64px;
+}
 }
 </style>
 </body>
