--- a/index.html
+++ b/index.html
@@ -371,6 +371,16 @@
     z-index: 11;
 }
     
+ a {
+    text-decoration: none;
+    color: #FF7063;
+    font-size: 16px;
+    font-weight: bold;
+    position: absolute;
+    bottom: -220px;
+    right: -4%;
+}
+    
 @media (max-width: 385px) {
     span.c-form__groupLabel {
     font-size: 14px;
