--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="c-form__progress"></div>
 
 <div class="c-formContainer">
-  <div class="c-welcome" style="text-align: center;margin-top: -30px;">Vous êtes bien inscrit<br> au jeu de piste !<br><img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/285/thumbs-up_1f44d.png" width="80px">><br><a href="womenforsea.fr">womenforsea.fr</a></div>
+  <div class="c-welcome" style="text-align: center;margin-top: -30px;">Vous êtes bien inscrit<br> au jeu de piste !<br><img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/285/thumbs-up_1f44d.png" width="80px"><br><a href="womenforsea.fr">womenforsea.fr</a></div>
   <form class="c-form" action="">
     <div class="c-form__group">
       <label class="c-form__label" for="username">
@@ -399,6 +399,13 @@
 .fin{
     width: 64px;
 }
+}
+    
+    @media (min-width: 386px) and (max-width: 440px){
+    .c-welcome {
+    font-size: 36px;
+}
+
 }
 </style>
 </body>
