--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   height: 100vh;
   display: grid;
   place-items: center;
-  background-color: #8DAEFF;
+  background-color: #2F5DCD;
   position: relative;
   overflow: hidden;
 }
@@ -315,7 +315,7 @@
   position: absolute;
   width: 0;
   height: 3px;
-  color: #8DAEFF;
+  color: #2F5DCD;
   background-color: currentColor;
   transition: 1s 0.2s ease-out;
 }
